# The-Document-Intelligence-Refinery

./: .gitignore  DOMAIN_NOTES.md  README.md  debug_triage_v2.py  demo_phase4.py  docling_analysis_results.txt  explore_docling.py  explore_pdfs.py  inspect_cell.py  inspect_labels.py  pdf_analysis_results.txt  pdf_table_analysis.txt  profile_corpus.py  pyproject.toml  report.md  test_class_a.py  test_layout.py  test_log.txt  test_output.txt  verification_log.txt  verify_extraction.py  verify_output.txt  verify_phase_3.py  verify_triage.py
.github/workflows/: cd-release.yaml  ci-pr.yaml
.refinery/: extraction_ledger.jsonl
.refinery/profiles/: 2013-E.C-Assigned-regular-budget-and-expense.json  2013-E.C-Audit-finding-information.json  2018_Audited_Financial_Statement_Report.json  2021_Audited_Financial_Statement_Report.json  Audit Report - 2023.json  CBE ANNUAL REPORT 2023-24.json  CBE Annual Report 2015-16.json
docs/: phase4_examples.md
rubric/: extraction_rules.yaml
src/: provenance.py
src/agents/: chunker.py  extractor.py  indexer.py  query_agent.py  query_tools.py  triage.py  vector_store.py
src/models/: chunk.py  profile.py  query.py
src/storage/: fact_table.py
src/strategies/: base.py  fast_text.py  implementations.py  layout.py  vision.py
src/the_document_intelligence_refinery.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: phase4_tests.py  test_fact_table.py  test_hierarchy.py  test_query_agent.py  test_refinements.py  test_triage.py
